fix spacing of navbar

--- a/app/javascript/components/layout/nav_style.scss
+++ b/app/javascript/components/layout/nav_style.scss
@@ -139,7 +139,7 @@
 }
 
 .navBar .sidBartabs ul li {
-    margin-bottom: 15px;
+    margin-bottom: 3px;
 }
 
 .navBar .sidBartabs nav.Polaris-Navigation {
